--- to do
focal for multi-layer objects
support for RasterQuad (4 dimensional) objects
add equivalent to "subsWithNA" to reclassify
move resample (bilenear interp. (and add other options)) and rasterize/(lines, polygons) to C
function for affine transformation

--- 11-April-2013, version: 2.1-25
removed bugs from 'f8' in the writing functions vignette (reported by J. R. Matchett)
fixed bug that occured when creating stack from ascii files if rgdal was not installed
fixed support for big.matrix to store raster data (because currently the bigmemory package is not available on windows) 
aggregate now allows aggregation to be 1 in one dimension 
fixed bug in density and hist with RasterStack objects (reported by Carsten Neumann)
added option 'along' to extract with lines
added option 'factors' to predict function to be able to specify factor levels.
added option 'sp' to extract to return an Spatial object

--- 10-March-2013, version: 2.1-10
replacement with multi-layer object now works as expected (problem reported by Julian Zeidler)
replacing a logical value in a RasterLayer previously changed the data type to numeric
improved setExtent (bug report by Kathi Borgmann)
adjacency is now obsolete (use adjacent instead)
rasterOptions now (optionally) saved in a file in the start-up working directory
fixed colnames in extract/polygons (cellnumbers=TRUE & df=TRUE). Reported by Florian de Boissieu
bug with Math methods that occured when using mapply fixed thanks to Martin Morgan
Then results of terrain(flowdir) were the mirror image of what the help says. The code has been fixed to match the help file. Reported by Daniel Schlaepfer.
Bug fixes in dealing with RATs (reported by Dylan Beaudette) and rasterize/points (reported by Steven Mosher)
Support for "GMT" netcdf files (suggested by Michael Sumner)
Option 'ncdf=TRUE' in raster function for files with non-standard (or no) ncdf file extension (suggested by Tom Roche).

--- 21-December-2012, version: 2.0-41