@@ -85,7 +85,8 @@ setClass('.RasterFile',
 		toptobottom='logical',
 		blockrows='integer',
 		blockcols='integer',
-		driver ='character'
+		driver ='character',
+		open = 'logical'
 		),
 	prototype (	
 	    name = '',
@@ -99,7 +100,8 @@ setClass('.RasterFile',
 		toptobottom = TRUE,
 		blockrows = as.integer(0),
 		blockcols= as.integer(0),
-		driver = '' # raster or gdal
+		driver = '', 
+		open = FALSE
 	),
 	validity = function(object) {
 		c1 <- datanotation %in% c('LOG1S', 'INT1S', 'INT2S', 'INT4S', 'INT1U', 'INT2U', 'FLT4S', 'FLT8S')
