@@ -5,6 +5,11 @@ add equivalent to "subsWithNA" to reclassify
 move resample (bilenear interp. (and add other options)) and rasterize/(lines, polygons) to C
 function for affine transformation
 
+--- developement version
+bug fixes in crosstab and in zonal, reported by Josh Perlman
+changed default datatype to FLT8S (from FLT4S) to avoid generalization of large integers
+NA value in native arc ascii files now only the flag value (it was any value <= the flag value)
+
 --- 11-April-2013, version: 2.1-25
 removed bugs from 'f8' in the writing functions vignette (reported by J. R. Matchett)
 fixed bug that occured when creating stack from ascii files if rgdal was not installed
